--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
     "/api/*": {
-        "target": "http://localhost:8000",
+        "target": "https://buy-and-sell-8b196.uc.r.appspot.com",
         "secure": false,
         "logLevel": "debug",
         "changeOrigin": true
